--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,13 @@
         android:theme="@style/Theme.MADPractical3_20012021007"
         tools:targetApi="31">
         <activity
+            android:noHistory="true"
+            android:label="Registration UI-MAD Practical"
             android:name=".RegistrationActivity"
             android:exported="false" />
         <activity
+            android:noHistory="true"
+            android:label="Login UI-MAD Practical"
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
