--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.madpractical3_20012021007"
         minSdk 22
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -30,6 +30,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures { viewBinding true }
+    namespace 'com.example.madpractical3_20012021007'
 }
 
 dependencies {
